  @startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0


class SNSUser {
-snsUserNumber
-birthdate
-phoneNumber
-sex
-address
-citizenCardNumber
-takenVaccines : List<TakenVacine>
}



class VaccineType{
-description
-code
-vaccineTechnology
}

class ApplicationUser {
    -name
    -email
    -password
    -role
}

class VaccineAppointment {
-snsUserNumber
-date
}

SNSUser "1" --> "*" VaccineAppointment: schedules >

ApplicationUser  <|-- SNSUser

VaccineAppointment "*" --> "1" VaccineType: has one  >

Company "1" --- "*" VaccineType : storages >


@enduml